--- a/public/global.css
+++ b/public/global.css
@@ -1,63 +1,21 @@
 html, body {
-	position: relative;
 	width: 100%;
 	height: 100%;
-}
-
-body {
-	color: #333;
+	padding: 0;
 	margin: 0;
-	padding: 8px;
+	background: transparent;
+}
+
+* {
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
+	--code-background: #222B33;
+	--code-border: #2C3638;
+	--primary: #3DA2FF;
+	--surface: #1E2022;
+	--border: #2F2F2F;
+	--panel: #1E1E1E;
 
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+	--g-surface: linear-gradient(to right, #1D2127, #2C3638);
+	--g-active: linear-gradient(to bottom, #222B33, #1F2124);
 }
